# extract-demo

./: Dockerfile  pyproject.toml  server.py
.github/workflows/: ci.yml
src/: api.py
src/templates/: __init__.py  classify.j2  prompt.j2
src/utils/: llm.py  schema.py
src/utils/schema/: classify.py  extract.py
